--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Cloud Storage App</p>
 
     <!--=================================================================================MODALKA=========================================================================================================================-->
 
-    <div class="backdrop is-open "> <!--is-open or is-closed--> 
+    <div class="backdrop is-closed "> <!--is-open or is-closed--> 
     <div class="modalwindow">
     
       <button class="modal-btn" type="button">
