--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body style="font-family:'Roboto', sans-serif;">
     <header class="header-decoration">
       <!--==================================================================================================Navigation==================================================================-->
-<div class="wrapp-header container">
+<div class="container wrapp-header">
       
       <nav class="wrapp-nav">
         <a class="logo link" href="./index.html">Web<span class="logo-decoration-head">Studio</span></a>
@@ -33,8 +33,8 @@
         <li class="contact-list-item"><a class="contact-list-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="contact-list-item"><a class="contact-list-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
-      </address>      
-    </div>
+  </address>      
+</div>
 
     </header> 
 
@@ -49,7 +49,7 @@
 </div>
       </section>
       <!--=================================================================================Second section ABOUT Direction==============================================================-->
-      <section class="second-section"> "
+      <section class="second-section"> 
 <div class="container">
         <h2 class="about visually-hidden">About</h2>
         <ul class="about-list list">
