delete defolt open

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ Cloud Storage App</p>
 
     <!--=================================================================================MODALKA=========================================================================================================================-->
 
-    <div class="backdrop is-open" data-modal > <!--is-open or is-closed--> 
+    <div class="backdrop " data-modal > <!--is-open or is-closed--> 
     <div class="modalwindow">
     
       <button class="modal-btn" data-modal-close type="button">
