fix open modal mobile

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ Cloud Storage App</p>
     refs.closeModalBtn.addEventListener('click', toggleModal);
 
     function toggleModal() {
-      refs.modal.classList.toggle('is-closed');
+      refs.modal.classList.toggle('is-open');
     }
   })();</script>
 
